--- a/prev/requirements.txt
+++ b/prev/requirements.txt
@@ -1,4 +1,4 @@
-pip install RPi.GPIO
-pip3 install adafruit-circuitpython-pca9685
-pip3 install adafruit-blinka
-pip install adafruit-circuitpython-motor
+RPi.GPIO
+adafruit-circuitpython-pca9685
+adafruit-blinka
+adafruit-circuitpython-motor
