--- a/config.json
+++ b/config.json
@@ -1,4 +1,13 @@
 {
+     "15":{
+        "name":"Servo 6",
+        "initial":"90",
+        "min":90,
+        "max":180,
+        "close": "90-180",
+        "open": "180-90"
+
+    },
     "14":{
         "name":"Servo 5",
         "initial":"160",
@@ -17,4 +26,5 @@
         "left": "160-0"
 
     }
+   
 }
