--- a/config.json
+++ b/config.json
@@ -25,5 +25,14 @@
         "right": "0-160",
         "left": "160-0"
 
+    },
+    "12":{
+        "name":"Servo 3",
+        "initial":10,
+        "min":10,
+        "max":160,
+        "up": "0-160",
+        "down": "160-0"
+
     }
 }
