--- a/config.json
+++ b/config.json
@@ -28,11 +28,19 @@
     },
     "12":{
         "name":"Servo 3",
-        "initial":160,
+        "initial":140,
         "min":10,
         "max":160,
         "up": "0-160",
         "down": "160-0"
+    },
+    "11":{
+        "name":"Servo 3",
+        "initial":100,
+        "min":90,
+        "max":170,
+        "up": "170-100",
+        "down": "100-190"
 
     }
 }
