--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
      "15":{
-        "name":"Servo 6",
+        "name":"CLAW (Servo 6)",
         "initial":90,
         "min":90,
         "max":180,
@@ -9,7 +9,7 @@
 
     },
     "14":{
-        "name":"Servo 5",
+        "name":"WRIST YAW (Servo 5)",
         "initial":50,
         "min":50,
         "max":160,
@@ -18,7 +18,7 @@
 
     },
     "13":{
-        "name":"Servo 4",
+        "name":"WRIST ROLL (Servo 4)",
         "initial":0,
         "min":0,
         "max":160,
@@ -27,7 +27,7 @@
 
     },
     "12":{
-        "name":"Servo 3",
+        "name":"FOREARM (Servo 3)",
         "initial":140,
         "min":10,
         "max":160,
@@ -35,7 +35,7 @@
         "down": "160-0"
     },
     "11":{
-        "name":"Servo 3",
+        "name":"ARM (Servo 2)",
         "initial":100,
         "min":90,
         "max":170,
